# file-ops-skill

./: .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: python-test.yml
skills/file-ops/: SKILL.md
skills/file-ops/scripts/: file_ops.py  setup.sh
tests/: test_file_ops.py
